deployment/kubernetes/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:

  # for nginx-ingress (NOT ingress-nginx, the open source one)
  # annotations:
    # nginx.org/rewrites: "serviceName=restful-blog-service rewrite=/"

  name: app-ingress
  namespace: apps
spec:
  - tls:
    hosts:
    - location-sharing-app.duckdns.org

  rules:
  - host: location-sharing-app.duckdns.org
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 443

      # - path: /api/user
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: user-service
      #       port: 
      #         number: 80

      # - path: /api/groups
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: group-service
      #       port: 
      #         number: 80
