deployment/kubernetes/apps/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: frontend-service
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`*`)
    services:
    - name: frontend-service
      port: 443
  tls:
    passthrough: true
